--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -1,10 +1,10 @@
 *{
-  padding: 0px;
-  margin: 0px;
+  /* padding: 0px;
+  margin: 0px; */
   font-family: monospace;
 }
 body {
-  background-image: url("../images/bg.gif");
+  background-image: url("../images/sunset.gif");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
@@ -13,27 +13,29 @@ ul{
   list-style: none;
 }
 ul li{
-  display:inline-block;
-  position:relative;
+  display: inline-block;
+  position: relative;
 }
 ul li a{
-  display:block;
-  padding:20px 25px;
-  margin-left: 80px;
+  display: block;
+  padding: 8px 25px;
+  text-align: center;
   color: #fff;
+  margin-left: 100px;
   font-family: 'Courier New', Courier, monospace;
   text-decoration: none;
-  text-align: center;
+
   font-size: 20px;
 }
 ul li ul.dropdown li{
-  display:block;
+  display: block;
 }
 ul li ul.dropdown{
   width: 100%;
-  position:absolute;
+  position: absolute;
   z-index: 999;
   display: none;
+  text-align: center;
 }
 ul li a:hover{
   background: rebeccapurple;
@@ -50,16 +52,16 @@ ul li{
   position: relative;
 }
 ul li a{
-  display:block;
-  padding:20px 25px;
-  margin-left:80px;
+  display: block;
+  padding: 8px 30px;
+  margin-left: 80px;
   color: #fff;
   text-decoration: none;
-  text-align:center;
+  text-align: center;
   font-size: 20px;
 }
 ul li ul.dropdown1 li{
-  display:block;
+  display: block;
 }
 ul li ul.dropdown1{
   width: 100%;
@@ -68,7 +70,8 @@ ul li ul.dropdown1{
   display: none;
 }
 ul li a:hover{
-  background: mediumpurple;
+  background: darkgray;
+  backdrop-filter: blur(5px);
 }
 ul li:hover ul.dropdown1{
   display: block;
@@ -76,37 +79,27 @@ ul li:hover ul.dropdown1{
 
 p{
   font-size: 60px;
-  margin-top: 350px;
+  /* margin-top: 350px; */
   text-align: center;
 }
 h3{
   font-size: 13px;
   text-align: center;
+  color: lightgray;
 }
 footer p{
   font-size: 19px;
-}
-.explorebutton {
-  width: 300px;
-  font-color: white;
-  font-size: 13px;
-  padding: 15px;
-  background: mediumpurple;
-  border: 0;
-  border-radius: 20px;
-  outline: none;
-  margin-top: 100px;
-  margin-left: 330px;
-  text-align: center;
-}
-.explorebutton a:hover {
-  transition: .3s;
-  color: rebeccapurple;
-  font-weight: bold;
-  font-family: monospace;
+  color: white;
 }
 
 a {
   color: white;
   font-family: monospace;
+  
+}
+.wrapper {
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
