--- a/css/Portfolio.css
+++ b/css/Portfolio.css
@@ -4,7 +4,7 @@
   font-family: monospace;
 }
 body {
-  background-image: url("../images/sunset.gif");
+  background-image: url("../images/port.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
