--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ nav ul li a{
     color: #60366b;
     position: relative;
     padding: 5px 0;
+    font-size: 18px;
 }
 nav ul li a:hover{
     color: #774185;
