--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ a{
 }
 .hero{
     width: 100%;
-
+    height: 140vh;
     background: url(../images/background.png);
     background-size: cover;
     background-position: center;
