--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,20 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body{
+    background-image: url("../background.png");
+    background-repeat: no-repeat;
+    background -size: cover;
+    width: 100%
 a{
     text-decoration: none;
 }
 .hero{
     width: 100%;
     height: 140vh;
-    background: url(../images/background.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    
+   
+    
 }
 
 nav{
