--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-image: url("../background.png");
+    background-image: url("../images/background.png");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%
@@ -15,13 +15,13 @@ body{
 a{
     text-decoration: none;
 }
-.hero{
-    width: 100%;
-    height: 140vh;
+
+    
+    
     
    
     
-}
+
 
 nav{
     display: flex;
