--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body{
     background-image: url("../images/background.png");
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%
+    width: 100%;
 }
 a{
     text-decoration: none;
