--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    height: 140vh;
 }
 a{
     text-decoration: none;
@@ -176,7 +177,7 @@ ul li a:hover{
 ul li:hover ul.dropdown1{
   display: block;
 }
-footer {
+footer p{
   font-size: 19px;
   color: white;
     text-align: justify;
