--- a/css/styles.css
+++ b/css/styles.css
@@ -11,18 +11,10 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 140vh;
 }
 a{
     text-decoration: none;
-}
-
-    
-
-   
-    
-
-
+} 
 nav{
     display: flex;
     align-items: center;
@@ -177,8 +169,8 @@ ul li a:hover{
 ul li:hover ul.dropdown1{
   display: block;
 }
-footer {
-  font-size: 19px;
+footer p{
+  font-size: 9px;
   color: white;
-  text-align: justify;
+  position: absolute;
 }
