--- a/css/styles.css
+++ b/css/styles.css
@@ -163,14 +163,11 @@ ul li ul.dropdown1{
   display: none;
 }
 ul li a:hover{
-  background: darkgray;
+  background: #af8fc9;
   backdrop-filter: blur(5px);
 }
 ul li:hover ul.dropdown1{
   display: block;
 }
-footer p{
-  font-size: 9px;
-  color: white;
-  position: absolute;
-}
+
+
