--- a/css/Tribute.css
+++ b/css/Tribute.css
@@ -52,6 +52,7 @@ h2{
   justify-content: center;
   transition: 2s;
 }
+
 .card:hover .card-body{
   right: 0;
 }
@@ -69,12 +70,19 @@ h2{
 }
 
 .card-info{
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 30px;
   margin: 40px 0;
   font-weight: 400;
   text-align: justify;
 }
+.ash-msg{
+  margin-top: 2px;
+  }
+
+.max-msg{
+  margin-top: 2px;
+  }
 
 .card-btn{
   color: #1f3d47;
