--- a/css/Tribute.css
+++ b/css/Tribute.css
@@ -72,14 +72,14 @@ h2{
 .card-info{
   font-size: 16px;
   line-height: 40px;
-  margin: 40px 0;
+  margin: 20px 10px;
   font-weight: 400;
   text-align: justify;
 }
 .ash-msg{
   font-size: 16px;
   line-height: 40px;
-  margin: 40px 0;
+  margin: 20px 10px;
   font-weight: 400;
   text-align: justify;
   }
@@ -87,7 +87,7 @@ h2{
 .max-msg{
   font-size: 16px;
   line-height: 40px;
-  margin: 40px 0;
+  margin: 20px 10px;
   font-weight: 400;
   text-align: justify;
   }
