--- a/css/Tribute.css
+++ b/css/Tribute.css
@@ -19,14 +19,14 @@ h2{
   margin-bottom: 1500px;
   align-items: center;
 }
-
 .card{
-  width: 520px;
+  width: 720px;
   height: 1000px;
   border-radius: 20px;
   overflow: hidden;
   border: 8px solid #ddd;
   position: relative;
+  margin: 50px;
 }
 
 .card-img{
