--- a/css/Tribute.css
+++ b/css/Tribute.css
@@ -26,7 +26,7 @@ h2{
   overflow: hidden;
   border: 8px solid #ddd;
   position: relative;
-  margin: 50px;
+  margin: 50px 30px;
 }
 
 .card-img{
@@ -46,7 +46,7 @@ h2{
   backdrop-filter: blur(5px);
   border-radius: 15px;
   color: white;
-  padding: 110px;
+  padding: 110px 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
