--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -13,45 +13,43 @@ p{
 
 
 .fa{
-  padding: 10px 100px;
+  padding: 20px 100px;
   font-size: 30px;
-  width: 130px;
+  width: 100px;
   text-align: center;
   text-decoration: none;
-  margin: 40px 60px;
-  margin-bottom: 25px;
+  margin: 60px 60px;
+  margin-bottom: 5px;
 }
 
 .fa:hover{
     opacity: 0.7;
 }
 
- h3{
-  margin-left: 500px;
-  margin-top: 270px;
+ h2. content2{
+  margin-left: 600px;
+  margin-top: 230px;
   position: absolute;
-  font-size: 30px;
+  font-size: 25px;
   font-family: 'Sofia', sans-serif;
   font-style: italic;
   letter-spacing: 10px;
 }
 
-h2{
+h2.content{
   margin-left: 100px;
-  margin-top: 750px;
+  margin-top: 230px;
   position: absolute;
-  font-size: 30px;
+  font-size: 25px;
   font-family: 'Sofia', sans-serif;
   font-style: italic;
   letter-spacing: 10px;
 }
 
-.left-part .maxsocmeds{
-  margin-bottom: 200px;
+.maxsocmeds{
   width: 30px;
   height: 20px;
-  padding-bottom: 350px;
-  margin-right: 130px;
+  margin-right: 200px;
 }
 
 .maxsocmeds .fa-facebook {
@@ -78,12 +76,10 @@ h2{
   border-radius: 50px;
 }
 
- 
-.left-part .ashsocmeds{
-  width: 50px;
-  height: 50px;
-  margin-bottom: 300px;
-  margin-left: 330px;
+.ashsocmeds{
+  width: 30px;
+  height: 20px;
+  margin-left: 550px;
 }
 
 .ashsocmeds .fa-facebook {
@@ -119,7 +115,7 @@ h2{
   border: 0;
   border-radius: 20px;
   outline: none;
-  margin-top: 250px;
+  margin-top: 550px;
   margin-left: 570px;
   text-align: center;
 }
