--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -26,11 +26,12 @@ p{
     opacity: 0.7;
 }
 
- h2. content2{
+ h2.content2{
   margin-left: 600px;
   margin-top: 230px;
   position: absolute;
   font-size: 25px;
+  color: white;
   font-family: 'Sofia', sans-serif;
   font-style: italic;
   letter-spacing: 10px;
@@ -49,7 +50,7 @@ h2.content{
 .maxsocmeds{
   width: 30px;
   height: 20px;
-  margin-right: 200px;
+  margin-right: 300px;
 }
 
 .maxsocmeds .fa-facebook {
