--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -35,12 +35,14 @@ p{
   font-family: 'Sofia', sans-serif;
   font-style: italic;
   letter-spacing: 10px;
+   margin-bottom: 40px;
 }
 
 h2.content{
   margin-left: 100px;
   margin-top: 230px;
   position: absolute;
+  color: white
   font-size: 25px;
   font-family: 'Sofia', sans-serif;
   font-style: italic;
@@ -51,6 +53,7 @@ h2.content{
   width: 30px;
   height: 20px;
   margin-right: 300px;
+  margin-bottom: 60px;
 }
 
 .maxsocmeds .fa-facebook {
