--- a/css/Resume.css
+++ b/css/Resume.css
@@ -20,7 +20,9 @@ body{
     background-image: url("../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    height: 1500px;
+    height: 100vh;
+    width: 100%;
+    background-attachment: fixed;
 }
 
 .main-section{
