--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,181 @@ nav ul li a:hover{
     color: #774185;
 }
 nav ul li a:after{
+    content: "";@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+body{
+    background-image: url("../images/background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+a{
+    text-decoration: none;
+} 
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 60px;
+}
+.logo{
+    max-height: 70px;
+}
+nav ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 10px 0px;
+}
+nav ul li a{
+    color: #60366b;
+    position: relative;
+    padding: 5px 0;
+    font-size: 18px;
+}
+nav ul li a:hover{
+    color: #774185;
+}
+nav ul li a:after{
     content: "";
+    position: absolute;
+    left: 0;
+    width: 0;
+    height: 3px;
+    background: #531d61;
+    transition: .3s;
+    bottom: 0;
+}
+nav ul li a:hover:after{
+    width: 100%;
+}
+.btn{
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 2px 30px;
+    border-radius: 500px;
+    display: inline-block;
+    font-weight: 500;
+    transition: all .4s ease-in-out;
+    background-size: 152% 100%;
+    background: #ec93fe;
+    border: 2px solid purple;
+    margin-left: 100px;
+}
+.btn:hover{
+    background: transparent;
+    border-color: #fd4766;
+    color: #fd4766;
+}
+.content{
+    position: absolute;
+    top: 35%;
+    left: 8%;
+}
+.content .title{
+    color: #1f1f25;
+    font-size: 15px;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    display: inline-block;
+    margin-bottom: 20px;
+    background: linear-gradient(120deg, #1c99fe 20.69%, #7644ff 50.19%,#fd4766 79.69%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.content h1{
+    color: #1f1f25;
+    font-size: 75px;
+    font-weight: 900;
+    line-height: 90px;
+    text-transform: inherit;
+    width: 70%;
+}
+.content h1 span{
+    color: mediumpurple;
+    text-shadow: 0 0 3px #2a363b, 0 0 5px #2a363b;
+}
+.content p{
+    width: 55%;
+    color: purple;
+    margin-top: 25px;
+    margin-bottom: 30px;
+}
+
+ul{
+  list-style: none;
+}
+ul li{
+  display: inline-block;
+  position: relative;
+}
+ul li a{
+  display: block;
+  padding: 20px 25px;
+  margin-left: 80px;
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  text-decoration: none;
+  text-align: center;
+  font-size: 20px;
+}
+ul li ul.dropdown li{
+  display: block;
+}
+ul li ul.dropdown{
+  width: 100%;
+  position: absolute;
+  z-index: 999;
+  display: none;
+}
+ul li a:hover{
+  background: rebeccapurple;
+}
+ul li:hover ul.dropdown{
+  display: block;
+}
+
+ul{
+  list-style: none;
+}
+ul li{
+  display: inline-block;
+  position: relative;
+}
+ul li a{
+  display: block;
+  padding: 20px 30px;
+  margin-left: 100px;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  font-size: 80px;
+}
+ul li ul.dropdown1 li{
+  display: block;
+}
+ul li ul.dropdown1{
+  width: 100%;
+  position: absolute;
+  z-index: 999;
+  display: none;
+}
+ul li a:hover{
+  background: #af8fc9;
+  backdrop-filter: blur(5px);
+}
+ul li:hover ul.dropdown1{
+  display: block;
+}
+
+
     position: absolute;
     left: 0;
     width: 0;
