--- a/css/Tribute.css
+++ b/css/Tribute.css
@@ -26,7 +26,8 @@ h2{
   border: 8px solid #ddd;
   position: absolute;
   margin-top: 200px;
-  margin-left: 70px;
+  margin-bottom: 150px;
+  margin-left: 100px;
 }
 
 .card-img{
