--- a/css/Contacts.css
+++ b/css/Contacts.css
@@ -12,128 +12,9 @@ p{
 }
 
 
-/*.fa{
-  padding: 30px 50px;
-  font-size: 30px;
-  width: 100px;
-  text-align: center;
-  text-decoration: none;
-  margin: 60px 60px;
-  margin-bottom: 3px;
-}
 
-.fa:hover{
-    opacity: 0.7;
-}
 
- h2.content2{
-  margin-left: 600px;
-  margin-top: 30px;
-  position: absolute;
-  font-size: 25px;
-  color: white;
-  font-family: 'Sofia', sans-serif;
-  font-style: italic;
-  letter-spacing: 10px;
-}
 
-h2.content{
-  margin-left: 100px;
-  margin-top: 30px;
-  position: absolute;
-  color: white;
-  font-size: 25px;
-  font-family: 'Sofia', sans-serif;
-  font-style: italic;
-  letter-spacing: 10px;
-}
-
-.maxsocmeds{
-  width: 30px;
-  height: 20px;
-  margin-left: 100px;
-}
-
-.maxsocmeds .fa-facebook {
-  background: #3B5998;
-  color: white;
-  border-radius: 50px;
-}
-
-.maxsocmeds .fa-twitter {
-  background: #55ACEE;
-  color: white;
-  border-radius: 50px;
-}
-  
-.maxsocmeds .fa-github {
-  background: #dd4b39;
-  color: white;
-  border-radius: 50px;
-}
-  
-.maxsocmeds .fa-instagram {
-  background: #125688;
-  color: white;
-  border-radius: 50px;
-}
-
-.ashsocmeds{
-  width: 30px;
-  height: 20px;
-  margin-left: 450px;
-}
-
-.ashsocmeds .fa-facebook {
-  background: #3B5998;
-  color: white;
-  border-radius: 50px;
-}
-
-.ashsocmeds .fa-twitter {
-  background: #55ACEE;
-  color: white;
-  border-radius: 50px;
-}
-  
-.ashsocmeds .fa-google {
-  background: #dd4b39;
-  color: white;
-  border-radius: 50px;
-}
-  
-.ashsocmeds .fa-instagram {
-  background: #125688;
-  color: white;
-  border-radius: 50px;
-}
-  
-.back-button {
-  width: 350px;
-  color: purple;
-  font-size: 30px;
-  padding: 15px;
-  background: mediumpurple;
-  border: 0;
-  border-radius: 20px;
-  outline: none;
-  margin-top: 550px;
-  margin-left: 570px;
-  text-align: center;
-}
-.back-button a:hover {
-  transition: .3s;
-  color: rebeccapurple;
-  font-weight: bold;
-  font-family: monospace;
-}
-
-a {
-  color: white;
-  font-family: monospace;
-}*/
-  
-  
   .fa {
     padding: 20px;
     font-size: 30px;
@@ -226,3 +107,23 @@ a {
     border: 5px solid mediumpurple;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     }
+  .back-button{
+    color: rebeccapurple;
+    font-size: 16px;
+    letter-spacing: 2px;
+    padding: 12px 30px;
+    border-radius: 500px;
+    display: inline-block;
+    font-weight: 500;
+    transition: all .4s ease-in-out;
+    background: #ec93fe;
+    border: 2px solid purple;
+    margin-top: 200px;
+    margin-left: 750px;
+}
+
+  .btn:hover{
+    background: transparent;
+    border-color: #fd4766;
+    color: #fd4766;
+}
