--- a/css/Resume2.css
+++ b/css/Resume2.css
@@ -13,7 +13,7 @@ html {
 }
 body {
 	font-family: Inter, sans-serif;
-	background: black;
+	background: #9160ab;
 	color: white;
 }
 /* Common Styles */
